Minor code cleanups and line-ending reverts